fixed full query parsing